k3s/generated_manifests/dashy/Namespace-dashy.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: dashy
