k3s/generated_manifests/dashy/Deployment-dashy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashy
  namespace: dashy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashy
  template:
    metadata:
      labels:
        app: dashy
    spec:
      containers:
        - env:
            - name: NODE_ENV
              value: production
          image: lissy93/dashy@sha256:7c79a07e6d204c6522d66d86144eccf8cf9e9366f75fea3551d86c7401c66da3
          name: dashy
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - mountPath: /app/user-data
              name: config
              readOnly: true
      volumes:
        - configMap:
            name: dashy-config
          name: config
