k3s/generated_manifests/dashy/Service-dashy-tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: dashy.doma.lol
    external-dns.alpha.kubernetes.io/target: homelab.boreal-scala.ts.net
  name: dashy-tailscale
  namespace: dashy
spec:
  clusterIP: None
  type: ClusterIP
