k3s/generated_manifests/dashy/Service-dashy.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashy
  namespace: dashy
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: dashy
  type: ClusterIP
