k3s/generated_manifests/dashy/Ingress-dashy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashy
  namespace: dashy
spec:
  ingressClassName: traefik
  rules:
    - host: dashy.doma.lol
