k3s/generated_manifests/dashy/IngressRoute-dashy.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashy
  namespace: dashy
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`dashy.doma.lol`)
      services:
        - name: dashy
          port: 80
